--- a/public/index.html
+++ b/public/index.html
@@ -62,22 +62,48 @@
         margin-bottom: 1rem;
       }
 
-      .file-input-container {
+      .topic-selection-container {
         text-align: center;
         margin-bottom: 2rem;
         padding: 2rem;
-        border: 2px dashed #ccc;
+      }
+
+      .topic-selection-container h2 {
+        color: var(--text-primary);
+        margin-bottom: 1.5rem;
+      }
+
+      .topic-buttons {
+        display: flex;
+        gap: 2rem;
+        justify-content: center;
+      }
+
+      .topic-select-btn {
+        padding: 1.5rem 3rem;
+        background: var(--card-bg);
+        border: 2px solid var(--primary-color);
         border-radius: 12px;
+        cursor: pointer;
+        font-size: 1.2rem;
+        font-weight: 500;
+        color: var(--primary-color);
         transition: all 0.3s ease;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        gap: 1rem;
       }
 
-      .file-input-container:hover {
-        border-color: var(--primary-color);
-        background: #f5f5f5;
+      .topic-select-btn i {
+        font-size: 2rem;
       }
 
-      #file-input {
-        display: none;
+      .topic-select-btn:hover {
+        background: var(--primary-color);
+        color: white;
+        transform: translateY(-3px);
+        box-shadow: 0 6px 12px rgba(0, 0, 0, 0.15);
       }
 
       .file-label {
@@ -450,9 +476,24 @@
         <p>選擇題庫開始測驗</p>
       </div>
 
-      <div class="file-input-container">
-        <input type="file" id="file-input" accept=".json" />
-        <label for="file-input" class="file-label">選擇題庫檔案</label>
+      <div class="topic-selection-container">
+        <h2>請選擇題庫類型</h2>
+        <div class="topic-buttons">
+          <button
+            class="topic-select-btn"
+            onclick="loadQuestions('veterinary')"
+          >
+            <i class="fas fa-stethoscope"></i>
+            獸醫題庫
+          </button>
+          <button
+            class="topic-select-btn"
+            onclick="loadQuestions('agriculture')"
+          >
+            <i class="fas fa-seedling"></i>
+            農業題庫
+          </button>
+        </div>
       </div>
 
       <div id="topics-container" class="topic-list"></div>
@@ -599,6 +640,39 @@
         document.getElementById("user-info").style.display = "none";
       }
 
+      async function loadQuestions(type) {
+        try {
+          const response = await fetch(`${API_URL}/quiz/questions/${type}`);
+          if (!response.ok) {
+            throw new Error("載入題庫失敗");
+          }
+
+          const data = await response.json();
+          console.log("收到的題庫資料:", data); // 添加這行來檢查接收到的資料
+
+          if (!Array.isArray(data) || data.length === 0) {
+            throw new Error("題庫格式不正確或是空的");
+          }
+
+          allQuestions = data;
+          const topics = [...new Set(allQuestions.map((q) => q.topic))];
+
+          if (topics.length === 0) {
+            throw new Error("沒有找到任何主題");
+          }
+
+          showTopicButtons();
+
+          // 隱藏選擇區，顯示題目列表
+          document.querySelector(".topic-selection-container").style.display =
+            "none";
+          document.getElementById("topics-container").style.display = "grid";
+        } catch (error) {
+          console.error("載入題庫失敗:", error);
+          alert(`載入題庫時發生錯誤：${error.message}`);
+        }
+      }
+
       // 保存測驗結果
       async function saveQuizResult(topic, score, totalQuestions, answers) {
         try {
@@ -652,31 +726,47 @@
       // 顯示主題按鈕
       function showTopicButtons() {
         const topics = [...new Set(allQuestions.map((q) => q.topic))];
+        console.log("可用的主題:", topics); // 添加這行來檢查主題
+
         const container = document.getElementById("topics-container");
+        if (!container) {
+          console.error("找不到 topics-container 元素");
+          return;
+        }
 
         container.innerHTML = topics
           .map(
             (topic) => `
-        <button class="topic-button" onclick="startQuiz('${topic}')">
-          ${topic}
-        </button>
-      `
+          <button class="topic-button" onclick="startQuiz('${topic}')">
+            ${topic}
+          </button>
+        `
           )
           .join("");
       }
 
       // 開始測驗
       function startQuiz(topic) {
+        // 1. 先篩選出該主題的題目
         currentQuestions = allQuestions.filter((q) => q.topic === topic);
         currentQuestion = 0;
         score = 0;
         answerHistory = [];
 
-        document.getElementById("topics-container").style.display = "none";
-        document.getElementById("file-input").parentElement.style.display =
+        // 2. 確保元素的顯示/隱藏狀態正確
+        document.querySelector(".topic-selection-container").style.display =
           "none";
+        document.getElementById("topics-container").style.display = "none";
         document.getElementById("quiz-container").style.display = "block";
 
+        // 3. 添加除錯日誌
+        console.log("開始測驗:", {
+          topic,
+          questionsCount: currentQuestions.length,
+          firstQuestion: currentQuestions[0],
+        });
+
+        // 4. 顯示第一個題目
         showQuestion();
       }
 
@@ -685,23 +775,38 @@
         const questionData = currentQuestions[currentQuestion];
         const container = document.getElementById("question-container");
 
-        container.style.display = "block";
-        container.innerHTML = `
-    <h2>${questionData.question}</h2>
-    <div class="options">
-      <button class="option-btn" onclick="checkAnswer('A')">${questionData.answer_a}</button>
-      <button class="option-btn" onclick="checkAnswer('B')">${questionData.answer_b}</button>
-      <button class="option-btn" onclick="checkAnswer('C')">${questionData.answer_c}</button>
-      <button class="option-btn" onclick="checkAnswer('D')">${questionData.answer_d}</button>
-    </div>
-  `;
+        // 添加除錯日誌
+        console.log("顯示題目:", {
+          questionNumber: currentQuestion + 1,
+          question: questionData,
+        });
 
+        // 確保容器可見
+        container.style.display = "block";
+
+        // 設置題目內容
+        container.innerHTML = `
+          <h2>${questionData.question}</h2>
+          <div class="options">
+            <button class="option-btn" onclick="checkAnswer('A')">${questionData.answer_a}</button>
+            <button class="option-btn" onclick="checkAnswer('B')">${questionData.answer_b}</button>
+            <button class="option-btn" onclick="checkAnswer('C')">${questionData.answer_c}</button>
+            <button class="option-btn" onclick="checkAnswer('D')">${questionData.answer_d}</button>
+          </div>
+        `;
+
+        // 更新進度條
+        updateProgress();
+      }
+
+      // 新增進度條更新函數
+      function updateProgress() {
         const progressText = document.getElementById("progress-text");
+        const progressFill = document.getElementById("progress-fill");
+
         progressText.textContent = `題目 ${currentQuestion + 1} / ${
           currentQuestions.length
         }`;
-
-        const progressFill = document.getElementById("progress-fill");
         progressFill.style.width = `${
           ((currentQuestion + 1) / currentQuestions.length) * 100
         }%`;
@@ -802,22 +907,22 @@
         score = 0;
 
         document.getElementById("quiz-container").innerHTML = `
-    <div class="quiz-content">
-      <div class="progress">
-        <span id="progress-text"></span>
-        <div class="progress-bar">
-          <div class="progress-fill" id="progress-fill"></div>
-        </div>
-      </div>
-      <div id="question-container" class="question-card"></div>
-    </div>
-    <div class="quiz-footer">
-      <button class="back-btn" onclick="showTopics()">← 返回主題選擇</button>
-    </div>
-  `;
+          <div class="quiz-content">
+            <div class="progress">
+              <span id="progress-text"></span>
+              <div class="progress-bar">
+                <div class="progress-fill" id="progress-fill"></div>
+              </div>
+            </div>
+            <div id="question-container" class="question-card"></div>
+          </div>
+          <div class="quiz-footer">
+            <button class="back-btn" onclick="showTopics()">← 返回主題選擇</button>
+          </div>
+        `;
 
-        document.getElementById("topics-container").style.display = "grid";
-        document.getElementById("file-input").parentElement.style.display =
+        document.getElementById("topics-container").style.display = "none";
+        document.querySelector(".topic-selection-container").style.display =
           "block";
         document.getElementById("quiz-container").style.display = "none";
       }
