--- a/public/index.html
+++ b/public/index.html
@@ -62,6 +62,71 @@
         margin-bottom: 1rem;
       }
 
+      .nav-btn {
+        padding: 0.8rem 1.5rem;
+        border: none;
+        border-radius: 8px;
+        cursor: pointer;
+        font-size: 0.9rem;
+        transition: all 0.3s ease;
+        display: inline-flex;
+        align-items: center;
+        gap: 0.5rem;
+        min-width: 120px;
+        justify-content: center;
+        color: white;
+      }
+
+      /* 統一按鈕基本樣式 */
+      .nav-btn {
+        padding: 0.8rem 1.5rem;
+        border: none;
+        border-radius: 8px;
+        cursor: pointer;
+        font-size: 0.9rem;
+        transition: all 0.3s ease;
+        display: inline-flex;
+        align-items: center;
+        gap: 0.5rem;
+        min-width: 120px;
+        justify-content: center;
+        margin-left: 1rem; /* 統一按鈕間距 */
+        color: white;
+      }
+
+      .nav-btn:hover {
+        transform: translateY(-2px);
+        box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+      }
+
+      /* 管理系統按鈕 */
+      .admin-btn {
+        background-color: #1a237e; /* 深藍色 */
+      }
+
+      /* 返回主頁按鈕 */
+      .home-btn {
+        background-color: #666666; /* 灰色 */
+      }
+
+      /* 登出按鈕 */
+      .logout-btn {
+        background-color: #2e7d32; /* 綠色 */
+      }
+
+      /* 用戶資訊區塊樣式 */
+      .user-info {
+        display: flex;
+        align-items: center;
+        padding: 1rem;
+        gap: 1rem; /* 確保所有元素間距一致 */
+      }
+
+      /* 用戶名稱樣式 */
+      #username-display {
+        margin-right: auto; /* 將用戶名稱推到左邊 */
+      }
+
       .topic-selection-container {
         text-align: center;
         margin-bottom: 2rem;
@@ -424,12 +489,18 @@
   </head>
   <body>
     <!-- 用戶資訊區塊 -->
+    <!-- 修改 user-info div 的內容 -->
     <div class="user-info" id="user-info" style="display: none">
       歡迎, <span id="username-display"></span>
-      <button class="admin-btn" id="admin-btn" onclick="goToAdmin()">
-        <i class="fas fa-cog"></i>管理系統
+      <button class="nav-btn admin-btn" id="admin-btn" onclick="goToAdmin()">
+        <i class="fas fa-cog"></i> 管理系統
       </button>
-      <button class="auth-btn" onclick="logout()">登出</button>
+      <button class="nav-btn home-btn" onclick="goHome()">
+        <i class="fas fa-home"></i> 返回主頁
+      </button>
+      <button class="nav-btn logout-btn" onclick="logout()">
+        <i class="fas fa-sign-out-alt"></i> 登出
+      </button>
     </div>
 
     <!-- 認證表單容器 -->
@@ -929,6 +1000,15 @@
 
       // 頁面載入時檢查認證狀態
       document.addEventListener("DOMContentLoaded", checkAuth);
+
+      function goHome() {
+        // 顯示主題選擇容器
+        document.querySelector(".topic-selection-container").style.display =
+          "block";
+        // 隱藏其他可能顯示的容器
+        document.getElementById("topics-container").style.display = "none";
+        document.getElementById("quiz-container").style.display = "none";
+      }
     </script>
   </body>
 </html>
