--- a/public/admin.html
+++ b/public/admin.html
@@ -659,7 +659,7 @@
 
       // 添加獨立的 goBack 函數
       function goBack() {
-        window.location.replace = "index.html"; // 直接指定返回首頁，而不是使用 history.back()
+        window.history.back();
       }
     </script>
   </body>
