--- a/public/index.html
+++ b/public/index.html
@@ -546,6 +546,385 @@
         box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
       }
 
+      /* 添加動畫背景容器 */
+      .animation-background {
+        position: fixed;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        z-index: -1;
+        background: linear-gradient(120deg, #e0f2f1, #b2dfdb);
+        overflow: hidden;
+      }
+
+      /* 漂浮元素的基本樣式 */
+      .floating-element {
+        position: absolute;
+        opacity: 0.2;
+        animation: float 15s infinite linear;
+      }
+
+      /* 為不同元素設置不同的大小和顏色 */
+      .leaf {
+        width: 30px;
+        height: 30px;
+        background-color: #4caf50;
+        clip-path: polygon(50% 0%, 100% 50%, 50% 100%, 0% 50%);
+      }
+
+      .circle {
+        width: 20px;
+        height: 20px;
+        background-color: #81c784;
+        border-radius: 50%;
+      }
+
+      .square {
+        width: 25px;
+        height: 25px;
+        background-color: #66bb6a;
+        transform: rotate(45deg);
+      }
+
+      /* 漂浮動畫 */
+      @keyframes float {
+        0% {
+          transform: translate(0, -100%) rotate(0);
+          opacity: 0;
+        }
+        10% {
+          opacity: 0.2;
+        }
+        90% {
+          opacity: 0.2;
+        }
+        100% {
+          transform: translate(var(--translate-x), 100vh) rotate(360deg);
+          opacity: 0;
+        }
+      }
+
+      /* 修改登入表單容器樣式 */
+      .auth-container {
+        background: rgba(255, 255, 255, 0.9);
+        backdrop-filter: blur(10px);
+        border: 1px solid rgba(255, 255, 255, 0.2);
+        animation: fadeIn 0.8s ease-out;
+      }
+
+      /* 登入表單出現動畫 */
+      @keyframes fadeIn {
+        from {
+          opacity: 0;
+          transform: translateY(20px);
+        }
+        to {
+          opacity: 1;
+          transform: translateY(0);
+        }
+      }
+
+      /* 為輸入框添加動畫效果 */
+      .form-group input {
+        transition: all 0.3s ease;
+        border: 2px solid transparent;
+      }
+
+      .form-group input:focus {
+        border-color: var(--primary-color);
+        box-shadow: 0 0 0 3px rgba(76, 175, 80, 0.1);
+      }
+
+      /* 登入按鈕懸停效果增強 */
+      .auth-btn {
+        position: relative;
+        overflow: hidden;
+        transition: all 0.3s ease;
+      }
+
+      .auth-btn:hover {
+        transform: translateY(-2px);
+        box-shadow: 0 5px 15px rgba(0, 0, 0, 0.2);
+      }
+
+      .auth-btn::after {
+        content: "";
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        width: 0;
+        height: 0;
+        background: rgba(255, 255, 255, 0.2);
+        border-radius: 50%;
+        transform: translate(-50%, -50%);
+        transition: width 0.6s ease, height 0.6s ease;
+      }
+
+      .auth-btn:active::after {
+        width: 300px;
+        height: 300px;
+      }
+
+      /* 添加動畫背景容器 */
+      .animation-background {
+        position: fixed;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        z-index: -1;
+        background: linear-gradient(120deg, #e0f2f1, #b2dfdb);
+        overflow: hidden;
+      }
+
+      /* 大標題容器 */
+      .main-title {
+        text-align: center;
+        margin-bottom: 2rem;
+        padding: 2rem 0;
+        animation: titleFloat 3s ease-in-out infinite;
+      }
+
+      .main-title h1 {
+        font-size: 3rem;
+        color: #2e7d32;
+        margin-bottom: 0.5rem;
+        text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.1);
+        animation: titleFadeIn 1.5s ease-out;
+      }
+
+      .main-title p {
+        font-size: 1.2rem;
+        color: #666666;
+        animation: titleFadeIn 1.5s ease-out 0.3s backwards;
+      }
+
+      /* 標題動畫 */
+      @keyframes titleFloat {
+        0%,
+        100% {
+          transform: translateY(0);
+        }
+        50% {
+          transform: translateY(-10px);
+        }
+      }
+
+      @keyframes titleFadeIn {
+        from {
+          opacity: 0;
+          transform: translateY(-20px);
+        }
+        to {
+          opacity: 1;
+          transform: translateY(0);
+        }
+      }
+
+      /* 漂浮元素的基本樣式 */
+      .floating-element {
+        position: absolute;
+        opacity: 0.2;
+        animation: float 15s infinite linear;
+      }
+
+      /* 為不同元素設置不同的大小和顏色 */
+      .leaf {
+        width: 30px;
+        height: 30px;
+        background-color: #4caf50;
+        clip-path: polygon(50% 0%, 100% 50%, 50% 100%, 0% 50%);
+      }
+
+      .circle {
+        width: 20px;
+        height: 20px;
+        background-color: #81c784;
+        border-radius: 50%;
+      }
+
+      .square {
+        width: 25px;
+        height: 25px;
+        background-color: #66bb6a;
+        transform: rotate(45deg);
+      }
+
+      /* 漂浮動畫 */
+      @keyframes float {
+        0% {
+          transform: translate(0, -100%) rotate(0);
+          opacity: 0;
+        }
+        10% {
+          opacity: 0.2;
+        }
+        90% {
+          opacity: 0.2;
+        }
+        100% {
+          transform: translate(var(--translate-x), 100vh) rotate(360deg);
+          opacity: 0;
+        }
+      }
+
+      /* 修改登入表單容器樣式 */
+      .auth-container {
+        background: rgba(255, 255, 255, 0.9);
+        backdrop-filter: blur(10px);
+        border: 1px solid rgba(255, 255, 255, 0.2);
+        animation: fadeIn 0.8s ease-out;
+        margin-top: 1rem;
+      }
+
+      /* 登入表單出現動畫 */
+      @keyframes fadeIn {
+        from {
+          opacity: 0;
+          transform: translateY(20px);
+        }
+        to {
+          opacity: 1;
+          transform: translateY(0);
+        }
+      }
+
+      /* 為輸入框添加動畫效果 */
+      .form-group input {
+        transition: all 0.3s ease;
+        border: 2px solid transparent;
+      }
+
+      .form-group input:focus {
+        border-color: var(--primary-color);
+        box-shadow: 0 0 0 3px rgba(76, 175, 80, 0.1);
+      }
+
+      /* 登入按鈕懸停效果增強 */
+      .auth-btn {
+        position: relative;
+        overflow: hidden;
+        transition: all 0.3s ease;
+      }
+
+      .auth-btn:hover {
+        transform: translateY(-2px);
+        box-shadow: 0 5px 15px rgba(0, 0, 0, 0.2);
+      }
+
+      .auth-btn::after {
+        content: "";
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        width: 0;
+        height: 0;
+        background: rgba(255, 255, 255, 0.2);
+        border-radius: 50%;
+        transform: translate(-50%, -50%);
+        transition: width 0.6s ease, height 0.6s ease;
+      }
+
+      .auth-btn:active::after {
+        width: 300px;
+        height: 300px;
+      }
+
+      /* 漂浮元素的基本樣式 */
+      .floating-element {
+        position: absolute;
+        opacity: 0.2;
+        animation: float 15s infinite linear;
+      }
+
+      /* 三種不同的葉子樣式 */
+      .leaf-1 {
+        width: 30px;
+        height: 30px;
+        background-color: #4caf50;
+        /* 橢圓形葉子 */
+        clip-path: polygon(
+          50% 0%,
+          80% 25%,
+          95% 60%,
+          90% 80%,
+          50% 100%,
+          10% 80%,
+          5% 60%,
+          20% 25%
+        );
+        transform-origin: center;
+      }
+
+      .leaf-2 {
+        width: 25px;
+        height: 25px;
+        background-color: #66bb6a;
+        /* 心形葉子 */
+        clip-path: polygon(
+          50% 0%,
+          90% 20%,
+          100% 60%,
+          90% 90%,
+          50% 100%,
+          10% 90%,
+          0% 60%,
+          10% 20%
+        );
+      }
+
+      .leaf-3 {
+        width: 35px;
+        height: 35px;
+        background-color: #81c784;
+        /* 圓形葉子 */
+        clip-path: polygon(
+          30% 0%,
+          70% 0%,
+          100% 30%,
+          100% 70%,
+          70% 100%,
+          30% 100%,
+          0% 70%,
+          0% 30%
+        );
+      }
+
+      /* 漂浮動畫 */
+      @keyframes float {
+        0% {
+          transform: translate(0, -100%) rotate(0);
+          opacity: 0;
+        }
+        10% {
+          opacity: 0.2;
+        }
+        90% {
+          opacity: 0.2;
+        }
+        100% {
+          transform: translate(var(--translate-x), 100vh) rotate(360deg);
+          opacity: 0;
+        }
+      }
+      /* 響應式設計 */
+      @media (max-width: 768px) {
+        .main-title h1 {
+          font-size: 2rem;
+        }
+
+        .main-title p {
+          font-size: 1rem;
+        }
+      }
+
+      @media (max-width: 480px) {
+        .main-title h1 {
+          font-size: 1.8rem;
+        }
+      }
+
       /* 修改現有的媒體查詢樣式 */
       @media (max-width: 768px) {
         body {
@@ -669,6 +1048,7 @@
   <body>
     <!-- 用戶資訊區塊 -->
     <!-- 修改 user-info div 的內容 -->
+    <div class="animation-background"></div>
     <div class="user-info" id="user-info" style="display: none">
       歡迎, <span id="username-display"></span>
       <button class="nav-btn admin-btn" id="admin-btn" onclick="goToAdmin()">
@@ -930,12 +1310,41 @@
         localStorage.removeItem("token");
         localStorage.removeItem("username");
         authToken = null;
+
+        // 移除已存在的元素（如果有的話）
+        const existingBackground = document.querySelector(
+          ".animation-background"
+        );
+        const existingTitle = document.querySelector(".main-title");
+        if (existingBackground) existingBackground.remove();
+        if (existingTitle) existingTitle.remove();
+
+        // 重新創建動畫背景和標題
+        const animationBackground = document.createElement("div");
+        animationBackground.className = "animation-background";
+        document.body.insertBefore(
+          animationBackground,
+          document.body.firstChild
+        );
+
+        const mainTitle = document.createElement("div");
+        mainTitle.className = "main-title";
+        mainTitle.innerHTML = `
+      <h1>農業知識測驗系統</h1>
+      <p>測試您的農業專業知識</p>
+  `;
+        document.body.insertBefore(
+          mainTitle,
+          document.getElementById("auth-container")
+        );
+
+        createFloatingElements();
+
+        // 更新顯示狀態
         document.getElementById("auth-container").style.display = "block";
         document.getElementById("main-container").style.display = "none";
         document.getElementById("user-info").style.display = "none";
       }
-
-      let currentQuizFormat = ""; // 儲存當前選擇的題庫形式
 
       function selectQuizFormat(format) {
         currentQuizFormat = format;
@@ -1271,6 +1680,196 @@
         // 重置當前選擇的形式
         currentQuizFormat = "";
       }
+
+      // 生成漂浮的葉子
+      function createFloatingElements() {
+        const background = document.querySelector(".animation-background");
+        const leafTypes = ["leaf-1", "leaf-2", "leaf-3"];
+        const numberOfLeaves = 25; // 增加葉子數量
+
+        for (let i = 0; i < numberOfLeaves; i++) {
+          const leaf = document.createElement("div");
+          const leafType =
+            leafTypes[Math.floor(Math.random() * leafTypes.length)];
+          leaf.className = `floating-element ${leafType}`;
+
+          // 隨機起始位置
+          const startPositionX = Math.random() * 100;
+          leaf.style.left = `${startPositionX}%`;
+
+          // 隨機漂浮路徑
+          const translateX = (Math.random() - 0.5) * 300; // 增加水平移動範圍
+          leaf.style.setProperty("--translate-x", `${translateX}px`);
+
+          // 隨機動畫延遲
+          leaf.style.animationDelay = `${Math.random() * 15}s`; // 增加最大延遲時間
+
+          // 隨機初始旋轉
+          leaf.style.transform = `rotate(${Math.random() * 360}deg)`;
+
+          // 隨機大小變化 (0.8 到 1.2 倍之間)
+          const scale = 0.8 + Math.random() * 0.4;
+          leaf.style.transform += ` scale(${scale})`;
+
+          background.appendChild(leaf);
+        }
+      }
+
+      // 修改登入驗證後的處理
+      // 更新檢查認證函數
+      async function checkAuth() {
+        authToken = localStorage.getItem("token");
+
+        if (!authToken) {
+          // 顯示登入頁面時，確保動畫背景和標題可見
+          document.getElementById("auth-container").style.display = "block";
+          document.getElementById("main-container").style.display = "none";
+          document.getElementById("user-info").style.display = "none";
+
+          // 移除已存在的元素（如果有的話）
+          const existingBackground = document.querySelector(
+            ".animation-background"
+          );
+          const existingTitle = document.querySelector(".main-title");
+          if (existingBackground) existingBackground.remove();
+          if (existingTitle) existingTitle.remove();
+
+          // 創建新的動畫背景和標題
+          const animationBackground = document.createElement("div");
+          animationBackground.className = "animation-background";
+          document.body.insertBefore(
+            animationBackground,
+            document.body.firstChild
+          );
+
+          const mainTitle = document.createElement("div");
+          mainTitle.className = "main-title";
+          mainTitle.innerHTML = `
+          <h1>農業知識測驗系統</h1>
+          <p>測試您的農業專業知識</p>
+      `;
+          document.body.insertBefore(
+            mainTitle,
+            document.getElementById("auth-container")
+          );
+
+          createFloatingElements();
+          return;
+        }
+
+        try {
+          const response = await fetch(`${API_URL}/auth/check-role`, {
+            headers: {
+              Authorization: `Bearer ${authToken}`,
+            },
+          });
+
+          if (!response.ok) {
+            throw new Error("認證失敗");
+          }
+
+          const data = await response.json();
+
+          // 登入成功後，移除動畫背景和標題
+          const animationBackground = document.querySelector(
+            ".animation-background"
+          );
+          const mainTitle = document.querySelector(".main-title");
+          if (animationBackground) animationBackground.remove();
+          if (mainTitle) mainTitle.remove();
+
+          // 顯示主要內容
+          document.getElementById("auth-container").style.display = "none";
+          document.getElementById("main-container").style.display = "block";
+          document.getElementById("user-info").style.display = "block";
+
+          const username = localStorage.getItem("username");
+          document.getElementById("username-display").textContent = username;
+
+          if (data.role === "admin") {
+            document.getElementById("admin-btn").style.display = "inline-block";
+          }
+        } catch (error) {
+          console.error("檢查角色失敗:", error);
+          localStorage.removeItem("token");
+          localStorage.removeItem("username");
+          authToken = null;
+          document.getElementById("auth-container").style.display = "block";
+          document.getElementById("main-container").style.display = "none";
+          document.getElementById("user-info").style.display = "none";
+        }
+      }
+
+      // 修改登出功能
+      function logout() {
+        localStorage.removeItem("token");
+        localStorage.removeItem("username");
+        authToken = null;
+
+        // 重新顯示動畫背景和標題
+        if (!document.querySelector(".animation-background")) {
+          const animationBackground = document.createElement("div");
+          animationBackground.className = "animation-background";
+          document.body.insertBefore(
+            animationBackground,
+            document.body.firstChild
+          );
+          createFloatingElements();
+        }
+        if (!document.querySelector(".main-title")) {
+          const mainTitle = document.createElement("div");
+          mainTitle.className = "main-title";
+          mainTitle.innerHTML = `
+          <h1>農業知識測驗系統</h1>
+          <p>測試您的農業專業知識</p>
+      `;
+          document.body.insertBefore(
+            mainTitle,
+            document.getElementById("auth-container")
+          );
+        }
+
+        document.getElementById("auth-container").style.display = "block";
+        document.getElementById("main-container").style.display = "none";
+        document.getElementById("user-info").style.display = "none";
+      }
+
+      // 當 DOM 載入完成後初始化動畫
+      document.addEventListener("DOMContentLoaded", () => {
+        // 只在未登入狀態下初始化動畫
+        if (!localStorage.getItem("token")) {
+          // 移除已存在的元素（如果有的話）
+          const existingBackground = document.querySelector(
+            ".animation-background"
+          );
+          const existingTitle = document.querySelector(".main-title");
+          if (existingBackground) existingBackground.remove();
+          if (existingTitle) existingTitle.remove();
+
+          // 創建新的動畫背景
+          const animationBackground = document.createElement("div");
+          animationBackground.className = "animation-background";
+          document.body.insertBefore(
+            animationBackground,
+            document.body.firstChild
+          );
+
+          // 創建新的標題
+          const mainTitle = document.createElement("div");
+          mainTitle.className = "main-title";
+          mainTitle.innerHTML = `
+          <h1>農業知識測驗系統</h1>
+          <p>測試您的農業專業知識</p>
+      `;
+          document.body.insertBefore(
+            mainTitle,
+            document.getElementById("auth-container")
+          );
+
+          // 創建漂浮元素
+          createFloatingElements();
+        }
+      });
     </script>
   </body>
 </html>
